[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/LandasansMedium-ALJ6m.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Characters/Friendly/TownNPC/Quest/Blueprint/Dialog.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.4, 0.290196, 0.196078, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.00392157, 0.0862745, 0.152941, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.698039, 0.501961, 0.341176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.00392157, 0.0862745, 0.152941, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.698039, 0.501961, 0.341176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.00392157, 0.0862745, 0.152941, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.698039, 0.501961, 0.341176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.00392157, 0.0862745, 0.152941, 1 )

[sub_resource type="DynamicFont" id=5]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )
Button/colors/font_color = Color( 0.00392157, 0.0862745, 0.152941, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.00392157, 0.0862745, 0.152941, 1 )
Button/colors/font_color_pressed = Color( 0.00392157, 0.0862745, 0.152941, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 3 )
Label/colors/font_color = Color( 0.00392157, 0.0862745, 0.152941, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null
Panel/styles/panel = SubResource( 4 )

[node name="Dialog" type="Control"]
margin_right = 500.0
margin_bottom = 282.0
theme = SubResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="."]
margin_left = 144.0
margin_top = 118.0
margin_right = 356.0
margin_bottom = 141.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 147.0
margin_top = 121.0
margin_right = 353.0
margin_bottom = 138.0
valign = 2
autowrap = true
max_lines_visible = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
margin_left = 320.0
margin_top = 139.0
margin_right = 356.0
margin_bottom = 160.0
focus_mode = 0
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mission" type="Panel" parent="."]
visible = false
margin_left = 144.0
margin_top = 118.0
margin_right = 356.0
margin_bottom = 210.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decline" type="Button" parent="Mission"]
margin_left = 105.0
margin_top = 90.0
margin_right = 212.0
margin_bottom = 111.0
focus_mode = 0
enabled_focus_mode = 0
text = "Decline"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" type="Button" parent="Mission"]
margin_top = 90.0
margin_right = 107.0
margin_bottom = 111.0
focus_mode = 0
enabled_focus_mode = 0
text = "Accept"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Mission"]
margin_left = 2.0
margin_top = 13.0
margin_right = 210.0
margin_bottom = 30.0
text = "Mission"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Mission"]
margin_left = 2.0
margin_top = 31.0
margin_right = 210.0
margin_bottom = 86.0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="resized" from="Label" to="." method="_on_Label_resized"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Mission/Decline" to="." method="_on_Decline_pressed"]
[connection signal="pressed" from="Mission/Accept" to="." method="_on_Accept_pressed"]
